--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -2242,7 +2242,8 @@ section.discourse-forum-page {
 }
 
 .home .hero-cta.hero-cta--tight {
-  margin-top: 5rem;
+  margin-top: 1rem;
+  transform: translateY(2.75rem);
 }
 
 .home .hero-cta .hero-border-beam-cta {
@@ -2271,6 +2272,22 @@ section.discourse-forum-page {
   .home .hero-cta {
     padding: 8px;
     font-size: var(--text-sm);
+  }
+
+  .quick-links span {
+    display: none;
+  }
+
+  .quick-links a {
+    font-size: var(--text-sm);
+  }
+
+  .baton-hero .quick-links.quick-links--tight {
+    transform: translateY(1rem);
+  }
+
+  .home .hero-cta.hero-cta--tight {
+    transform: translateY(1.25rem);
   }
 }
 
@@ -2750,7 +2767,8 @@ iframe#q-messenger-frame:not(.qlfd-maximized) {
   position: absolute;
   top: 6%;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(-50%) scaleY(0.90);
+  transform-origin: top center;
   width: 100%;
   max-width: 1460px;
   height: 100%;
@@ -2784,6 +2802,8 @@ iframe#q-messenger-frame:not(.qlfd-maximized) {
   .baton-2::before,
   .baton-hero::before {
     background-size: contain;
+    height: 100%;
+    transform: translateX(-50%) scaleY(0.9);
   }
 }
 
@@ -2846,7 +2866,8 @@ iframe#q-messenger-frame:not(.qlfd-maximized) {
 
 .baton-hero .quick-links.quick-links--tight {
   gap: 0.5rem;
-  margin-top: 1.25rem;
+  margin-top: 1.55rem;
+  transform: translateY(3rem);
 }
 
 .baton-hero .quick-links a {
@@ -2866,6 +2887,14 @@ iframe#q-messenger-frame:not(.qlfd-maximized) {
 
   .quick-links a {
     font-size: var(--text-sm);
+  }
+
+  .baton-hero .quick-links.quick-links--tight {
+    transform: translateY(2.25rem);
+  }
+
+  .home .hero-cta.hero-cta--tight {
+    transform: translateY(1.25rem);
   }
 }
 
@@ -2990,3 +3019,4 @@ html[data-theme='dark'] .sidebar-title {
 .grecaptcha-badge {
   display: none;
 }
+
