Adding private pill (#7987)
## What are you changing in this pull request and why?

* Adds a "private" pill to help communicate when a feature is beta or
preview but not available to self select into it.
* Fixes color to align with brand design

TBD:
* I will open. a request for the web team to fix the fonts etc


## Checklist
<!-- Ensure your PR meets the following items. Feel free to add
additiona checklist items to the list if additional checks need to
happen before the PR is merged, such as:
- [ ] Needs technical review
- [ ] Change base branch
- [ ] Merge on xyz date
-->
- [ ] The changes in this PR meet the [docs style
guide/fundamentals](https://github.com/dbt-labs/docs.getdbt.com/blob/current/contributing/content-style-guide.md)
required for all content.
- [ ] Applied the proper versioning rules if the content is for specific
dbt version(s): ([version a whole
page](https://github.com/dbt-labs/docs.getdbt.com/blob/current/contributing/single-sourcing-content.md#adding-a-new-version)
or [version a block of
content](https://github.com/dbt-labs/docs.getdbt.com/blob/current/contributing/single-sourcing-content.md#versioning-blocks-of-content)
- [ ] The content in this PR requires a dbt release note, so I added one
to the [release notes
page](https://docs.getdbt.com/docs/dbt-versions/dbt-cloud-release-notes).).
<!--
PRE-RELEASE VERSION OF dbt (if so, uncomment):
- [ ] Add a note to the prerelease version [Migration
Guide](https://github.com/dbt-labs/docs.getdbt.com/tree/current/website/docs/docs/dbt-versions/core-upgrade)
-->
<!-- 
ADDING OR REMOVING PAGES (if so, uncomment):
- [ ] Add/remove page in `website/sidebars.js`
- [ ] Provide a unique filename for new pages
- [ ] Add an entry for deleted pages in `website/vercel.json`
- [ ] Run link testing locally with `npm run build` to update the links
that point to deleted pages
-->

<!-- vercel-deployment-preview -->
---
🚀 Deployment available! Here are the direct links to the updated files:


-
https://docs-getdbt-

--- a/website/src/components/lifeCycle/styles.module.css
+++ b/website/src/components/lifeCycle/styles.module.css
@@ -8,7 +8,6 @@
     margin-left: 12px; /* Margin to separate from the header text */
     vertical-align: middle; /* Align with the title */
     display: inline-block; /* Use inline-block for better control */
-    text-transform: capitalize; /* Uppercase text */
     line-height: 1.6; /* Adjust line height for vertical alignment */
     text-decoration: none; /* No underline by default */
     transition: background-color 0.2s ease, transform 0.2s ease, text-decoration 0.2s ease;
@@ -18,7 +17,7 @@
 .lifecycle:hover {
     background-color: #EBEDF0;
     color: #e3f2fd;
-    text-decoration: underline;
+    text-decoration: none;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
     transform: scale(1.09); /* Slightly enlarge the pill */
 }
