--- a/website/src/components/copyPage/styles.module.css
+++ b/website/src/components/copyPage/styles.module.css
@@ -90,9 +90,10 @@
   text-decoration: none;
 }
 
-.dropdownItem:hover {
+a.dropdownItem:hover, .dropdownItem:hover {
   background: #f9fafb;
-  text-decoration: none;
+  text-decoration: none !important;
+  color: #374151 !important;
 }
 
 .dropdownItem svg {
@@ -235,9 +236,14 @@
   color: #d1d5db;
 }
 
-[data-theme='dark'] .dropdownItem:hover {
+[data-theme='dark'] .copyPageContainer a.dropdownItem:hover, [data-theme='dark'] .dropdownItem:hover {
   background: #374151;
-  text-decoration: none;
+  text-decoration: none !important;
+  color: #d1d5db !important;
+}
+
+[data-theme='dark'] .copyPageContainer a.dropdownItem:hover .dropdownItemTitle {
+  color: #d1d5db !important;
 }
 
 [data-theme='dark'] .copyIcon,
